--- a/Develop/views/login.handlebars
+++ b/Develop/views/login.handlebars
@@ -1,40 +1,21 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
+<form>
+  <div class="form-group">
+    <label for="email-login">Email address</label>
+    <input
+      type="email"
+      class="form-control"
+      id="email-login"
+      aria-describedby="emailHelp"
+    />
+    <small id="emailHelp" class="form-text text-muted">We'll never share your
+      email with anyone else.</small>
   </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
+  <div class="form-group">
+    <label for="password-login">Password</label>
+    <input type="password" class="form-control" id="password-login" />
   </div>
-</div>
+  <button type="submit" class="btn btn-primary login-btn">Login</button>
+  <a href="/register" class="btn btn-warning apply-background">Sign Up Instead</a>
+</form>
 
-<script src="./js/login.js"></script>
+<script src="/js/login.js"></script>
