login an dregister routes and handlebars running

--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -1,6 +1,8 @@
-<section class="container">
+{{!-- <section class="container">
   <h3 class="gallery-name">{{gallery.name}}</h3>
   <section class="flex-row justify-center">
     {{#each user.post as |post|}}{{/each}}
   </section>
-</section>
+</section> --}}
+
+<div>Logged in</div>
