--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -28,19 +28,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item {{#if isHome}}active{{/if}}">
               <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span></a>
+                <span class="sr-only"></span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Logout</a>
-            </li>
+            {{#if logged_in}}
+              <li class="nav-item {{#if isDash}}active{{/if}}">
+                <a class="nav-link" href="#">Dashboard</a>
+              </li>
+            {{/if}}
+            {{#unless logged_in}}
+              <li class="nav-item {{#if isLogin}}active{{/if}}">
+                <a class="nav-link" href="#">Login</a>
+              </li>
+            {{/unless}}
+            {{#if logged_in}}
+              <li class="nav-item">
+                <a class="nav-link" href="#">Logout</a>
+              </li>
+            {{/if}}
           </ul>
         </div>
       </nav>
