--- a/Develop/views/layouts/partials/post-details.handlebars
+++ b/Develop/views/layouts/partials/post-details.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+{{!-- <div class="card">
   <div class="card-header">
     {{post.title}}
   </div>
@@ -20,4 +20,4 @@
   <div class="card-body">
     {{comment.text}}
   </div>
-</div>
+</div> --}}
