--- a/Develop/views/register.handlebars
+++ b/Develop/views/register.handlebars
@@ -1,25 +1,29 @@
-<form>
-  <div class="form-group">
-    <label for="username-register">Username</label>
-    <input type="password" class="form-control" id="username-register" />
+<div class="card mt-5 center-card border-0">
+  <div class="card-body col-md-6">
+    <form>
+      <div class="form-group">
+        <label for="username-register">Username</label>
+        <input class="form-control" id="username-register" />
+      </div>
+      <div class="form-group">
+        <label for="email-register">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="email-register"
+          aria-describedby="emailHelp"
+        />
+        <small id="emailHelp" class="form-text text-muted">We'll never share
+          your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="password-register">Password</label>
+        <input type="password" class="form-control" id="password-register" />
+      </div>
+      <button type="click" class="btn btn-primary register-btn">Sign Up</button>
+    </form>
+    <a href="/login">Login Instead</a>
   </div>
-  <div class="form-group">
-    <label for="email-register">Email address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email-register"
-      aria-describedby="emailHelp"
-    />
-    <small id="emailHelp" class="form-text text-muted">We'll never share your
-      email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="password-register">Password</label>
-    <input type="password" class="form-control" id="password-register" />
-  </div>
-  <button type="submit" class="btn btn-primary register-btn">Sign Up</button>
-  <a href="/login" class="btn btn-warning apply-background">Login Instead</a>
-</form>
+</div>
 
-<script src="/js/login.js"></script>
+<script src="/js/register.js"></script>
