--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="with-background">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">The Tech Blog</a>
