--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -14,42 +14,37 @@
   <body class="with-background">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">The Tech Blog</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item {{#if isHome}}active{{/if}}">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only"></span></a>
-            </li>
-            {{#if logged_in}}
-              <li class="nav-item {{#if isDash}}active{{/if}}">
-                <a class="nav-link" href="#">Dashboard</a>
-              </li>
-            {{/if}}
-            {{#unless logged_in}}
-              <li class="nav-item {{#if isLogin}}active{{/if}}">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-            {{/unless}}
-            {{#if logged_in}}
-              <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
-              </li>
-            {{/if}}
-          </ul>
-        </div>
-      </nav>
+  <a class="navbar-brand" href="#">The Tech Blog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-between" id="navbarNav"> <!-- justify-content-between added -->
+    <ul class="navbar-nav">
+      <li class="nav-item {{#if isHome}}active{{/if}}">
+        <a class="nav-link" href="/homepage">Home
+          <span class="sr-only"></span></a>
+      </li>
+      {{#if logged_in}}
+        <li class="nav-item {{#if isDash}}active{{/if}}">
+          <a class="nav-link" href="#">Dashboard</a>
+        </li>
+      {{/if}}
+      {{#unless logged_in}}
+        <li class="nav-item {{#if isLogin}}active{{/if}}">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+      {{/unless}}
+    </ul>
+    <ul class="navbar-nav">
+      {{#if logged_in}}
+        <li class="nav-item">
+          <button class="nav-link logout btn bg-light" id="logout">Logout</button>
+        </li>
+      {{/if}}
+    </ul>
+  </div>
+</nav>
     </header>
     {{{body}}}
     <script
@@ -67,6 +62,8 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    {{! <script src="/js/logout.js"></script> }}
+    {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
   </body>
 </html>
